--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ace Nuvio Providers",
+  "name": "Alas Nuvio Providers",
   "version": "1.0.0",
   "description": "Custom Nuvio provider repo converted from ashi source logic",
   "author": "Ace",
@@ -9,7 +9,7 @@
       "name": "Ashi 1Movies",
       "description": "1Movies-based scraper adapted from ashi source for Nuvio",
       "version": "1.0.0",
-      "author": "Ace",
+      "author": "Alas",
       "supportedTypes": ["movie", "tv"],
       "filename": "providers/ashi1movies.js",
       "enabled": true,
@@ -23,7 +23,7 @@
       "name": "ashianimekai",
       "description": "Animekai-based scraper adapted from ashi source for Nuvio",
       "version": "1.0.0",
-      "author": "Ace",
+      "author": "Alas",
       "supportedTypes": ["movie", "tv"],
       "filename": "providers/ashianimekai.js",
       "enabled": true,
