--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Alas Nuvio Providers",
+  "name": "Alas Providers",
   "version": "1.0.0",
   "description": "Custom Nuvio provider repo converted from ashi source logic",
   "author": "Ace",
