added more plugins

--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,13 @@
   "author": "Ace",
   "scrapers": [
     {
-      "id": "ashi1movies",
-      "name": "Ashi 1Movies",
-      "description": "1Movies-based scraper adapted from ashi source for Nuvio",
+      "id": "alas-1movies",
+      "name": "alas-1movies",
+      "description": "1Movies source adapted from standalone 1movies source for Nuvio",
       "version": "1.0.0",
       "author": "Alas",
       "supportedTypes": ["movie", "tv"],
-      "filename": "providers/ashi1movies.js",
+      "filename": "providers/alas-1movies.js",
       "enabled": true,
       "formats": ["m3u8"],
       "logo": "https://files.catbox.moe/y8v199.png",
@@ -26,6 +26,34 @@
       "author": "Alas",
       "supportedTypes": ["movie", "tv"],
       "filename": "providers/ashianimekai.js",
+      "enabled": true,
+      "formats": ["m3u8"],
+      "logo": "https://files.catbox.moe/y8v199.png",
+      "contentLanguage": ["en"],
+      "supportsExternalPlayer": true
+    },
+    {
+      "id": "alas-hianime",
+      "name": "alas-hianime",
+      "description": "HiAnime source adapted from standalone hianime source for Nuvio",
+      "version": "1.0.0",
+      "author": "Alas",
+      "supportedTypes": ["movie", "tv"],
+      "filename": "providers/alas-hianime.js",
+      "enabled": true,
+      "formats": ["m3u8"],
+      "logo": "https://files.catbox.moe/y8v199.png",
+      "contentLanguage": ["en"],
+      "supportsExternalPlayer": true
+    },
+    {
+      "id": "alas-animepahe",
+      "name": "alas-animepahe",
+      "description": "Animepahe source adapted from standalone animepahe source for Nuvio",
+      "version": "1.0.0",
+      "author": "Alas",
+      "supportedTypes": ["movie", "tv"],
+      "filename": "providers/alas-animepahe.js",
       "enabled": true,
       "formats": ["m3u8"],
       "logo": "https://files.catbox.moe/y8v199.png",
