removed obsolete sources | changed readme

--- a/manifest.json
+++ b/manifest.json
@@ -5,44 +5,16 @@
   "author": "Ace",
   "scrapers": [
     {
-      "id": "alas-1movies",
-      "name": "alas-1movies",
-      "description": "1Movies source adapted from standalone 1movies source for Nuvio",
-      "version": "1.0.0",
-      "author": "Alas",
-      "supportedTypes": ["movie", "tv"],
-      "filename": "providers/alas-1movies.js",
-      "enabled": true,
-      "formats": ["m3u8"],
-      "logo": "https://files.catbox.moe/y8v199.png",
-      "contentLanguage": ["en"],
-      "supportsExternalPlayer": true
-    },
-    {
-      "id": "ashianimekai",
-      "name": "ashianimekai",
+      "id": "alas-animekai",
+      "name": "alas-animekai",
       "description": "Animekai-based scraper adapted from ashi source for Nuvio",
       "version": "1.0.0",
       "author": "Alas",
       "supportedTypes": ["movie", "tv"],
-      "filename": "providers/ashianimekai.js",
+      "filename": "providers/alas-animekai.js",
       "enabled": true,
       "formats": ["m3u8"],
-      "logo": "https://files.catbox.moe/y8v199.png",
-      "contentLanguage": ["en"],
-      "supportsExternalPlayer": true
-    },
-    {
-      "id": "alas-hianime",
-      "name": "alas-hianime",
-      "description": "HiAnime source adapted from standalone hianime source for Nuvio",
-      "version": "1.0.0",
-      "author": "Alas",
-      "supportedTypes": ["movie", "tv"],
-      "filename": "providers/alas-hianime.js",
-      "enabled": true,
-      "formats": ["m3u8"],
-      "logo": "https://files.catbox.moe/y8v199.png",
+      "logo": "https://apktodo.io/uploads/2025/5/animekai-icon.jpg",
       "contentLanguage": ["en"],
       "supportsExternalPlayer": true
     },
@@ -56,7 +28,21 @@
       "filename": "providers/alas-animepahe.js",
       "enabled": true,
       "formats": ["m3u8"],
-      "logo": "https://files.catbox.moe/y8v199.png",
+      "logo": "https://raw.githubusercontent.com/Alas-3/alas-plugins/main/Assets/animepahe.png",
+      "contentLanguage": ["en"],
+      "supportsExternalPlayer": true
+    },
+    {
+      "id": "alas-animepahedub",
+      "name": "alas-animepahedub",
+      "description": "Animepahe DUB source adapted from standalone animepaheDub source for Nuvio",
+      "version": "1.0.0",
+      "author": "Alas",
+      "supportedTypes": ["movie", "tv"],
+      "filename": "providers/alas-animepahedub.js",
+      "enabled": true,
+      "formats": ["m3u8"],
+      "logo": "https://raw.githubusercontent.com/Alas-3/alas-plugins/main/Assets/animepahe.png",
       "contentLanguage": ["en"],
       "supportsExternalPlayer": true
     }
